2004-03-14  Kevin Vandersloot <kfv101 psu edu>

	* configure.in: release 2.5.4

2004-02-22  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "en_CA" to ALL_LINGUAS.

2004-02-19 Breda McColgan <breda.mccolgan@sun.com>

	* help/C/gnome-system-monitor.xml: Updated based on peer review comments from Bill Day
	* help/C/gnome-system-monitor-C.omf: Updated date.

2004-02-15  Kevin Vandersloot

	* configure.in: release 2.5.3

2004-02-06 Breda McColgan <breda.mccolgan@sun.com>

	* help/C/gnome-system-monitor.xml: Updated for GNOME 2.6, technical review draft	
	* help/C/gnome-system-monitor-C.omf: Updated for GNOME 2.6
2004-02-06 Breda McColgan <breda.mccolgan@sun.com>

	* help/C/gnome-system-monitor.xml: Updated for GNOME 2.6, technical review draft	
	* help/C/gnome-system-monitor-C.omf: Updated for GNOME 2.6
	* help/C/l10n.txt: Added for GNOME 2.6
	* help/C/figures/gnome-system-monitor_window.png: Added for GNOME 2.6

2004-01-03  Robert Sedak  <robert.sedak@sk.htnet.hr>

        * configure.in: Added "hr" in ALL_LINGUAS.

2004-01-02  Christian Neumair  <chris@gnome-de.org>

	* src/utils.c (get_size_string):
	Use ngettext for plurals (#106704).

2003-12-11  Kaushal Kumar  <kaushal.kumar@wipro.com>

	* src/interface.c (create_sys_view):
	Fix compilation (Bugzilla bug #129080).
	
2003-12-07  Kevin Vandersloot

	* configure.in: release 2.5.2

2003-12-02  Žygimantas Beručka  <uid0@tuxfamily.org>

	* configure.in: Added "lt" to ALL_LINGUAS again because for
	some reason it was gone.

2003-11-16  Havoc Pennington  <hp@redhat.com>

	* configure.in: require latest libwnck

2003-11-08  Kevin Vandersloot

	* configure.in: release 2.5.1

2003-10-20  Bastien Nocera  <hadess@hadess.net>

	* configure.in: release gnome-system-monitor 2.5.0

2003-10-20  Bastien Nocera  <hadess@hadess.net>

	* configure.in: require libgtop 2.5.0

2003-10-20  Bastien Nocera  <hadess@hadess.net>

	* configure.in: fix compilation, lt wasn't committed to CVS
