@@ -1,3 +1,7 @@
+2004-03-20  Kevin Vandersloot <kfv101 psu edu>
+
+	* callbacks.c: take into account the block size to determine disk sizes.
+
 2004-02-11  Kevin Vandersloot
 
 	* callbacks.c: Fix bad free that may cause crashes. From
