@@ -1,3 +1,7 @@
+2004-03-20  Kevin Vandersloot <kfv101 psu edu>
+
+	* configure.in: require latest libgtop
+
 2004-03-14  Kevin Vandersloot <kfv101 psu edu>
 
 	* configure.in: release 2.5.4
